--- a/.env
+++ b/.env
@@ -13,3 +13,6 @@ DB_MIN_CONNECTIONS=2
 DB_MAX_IDLE_CONNECTIONS=5
 DB_IDLE_TIMEOUT=30000
 DB_CONNECTION_MAX_LIFETIME=2000
+
+#UTILS
+POLLING_MAX_TIMEOUT=30000
